--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,7 +1,49 @@
 %% Created using Papers on Mon, 07 Mar 2016.
 %% http://papersapp.com/papers/
 
-@article{Marconi:2016ab,
+@article{McRose:2019,
+url_Paper = {2019_McRose_et_al.pdf},
+author = {McRose, D L and Lee, A and Kopf, S H and Baars, O and Kraepiel, A M L and Sigman, Daniel and Morel, F M M and Zhang, X},
+title = {{Effect of iron limitation on the isotopic composition of cellular and released fixed nitrogen in \emph{Azotobacter vinelandii}}},
+journal = {Geochimica Et Cosmochimica Acta},
+year = {2019},
+volume = {244},
+pages = {12--23},
+month = jan
+}
+
+@article{Neubauer:2018,
+author = {Neubauer, Cajetan and Kasi, Ajay S and Grahl, Nora and Sessions, A L and Kopf, Sebastian H and Kato, Roberta and Hogan, Deborah A and Newman, D K},
+title = {{Refining the Application of Microbial Lipids as Tracers of \emph{Staphylococcus aureus} Growth Rates in Cystic Fibrosis Sputum.}},
+journal = {Journal of Bacteriology},
+year = {2018},
+pages = {1--32},
+month = sep
+}
+
+@article{Neubauer:2018,
+author = {Neubauer, Cajetan and Sessions, A L and Booth, Ian R and Bowen, Benjamin P and Kopf, Sebastian H and Newman, D K and Dalleska, Nathan F},
+title = {{Towards measuring growth rates of pathogens during infections by D$_{2}$O-labeling lipidomics}},
+journal = {Rapid Communications in Mass Spectrometry},
+year = {2018},
+pages = {1--35},
+month = sep
+}
+
+@article{Silverman:2018,
+url_Paper = {2018_Silverman_et_al.pdf},
+author = {Silverman, Shaelyn N and Kopf, Sebastian H and Bebout, Brad M and Gordon, Richard and Som, Sanjoy M},
+title = {{Morphological and isotopic changes of heterocystous cyanobacteria in response to N2 partial pressure}},
+journal = {Geobiology},
+year = {2018},
+volume = {135},
+number = {440-453},
+pages = {839--32},
+month = oct
+}
+
+@article{Marconi:2016,
+url_Paper = {2016_Marconi_et_al.pdf},
 author = {Marconi, D and Kopf, S H and Rafter, P A and Sigman, D},
 title = {{Aerobic respiration along isopycnals leads to overestimation of the isotope effect of denitrification in the ocean water column.}},
 journal = {Geochimica Et Cosmochimica Acta},
@@ -10,17 +52,32 @@ volume = {197},
 pages = {1--54}
 }
 
-@incollection{Bose:2011bj,
-author = {Bose, A and Kopf, S H and Newman, D K},
-title = {{From Geocycles to Genomes and Back}},
-booktitle = {Microbial Metal and Metalloid Metabolism},
-year = {2011},
-pages = {13--38},
-publisher = {ASM Press},
-address = {Washington, D.C.}
+@article{Kopf:2016,
+url_Paper = {2016_Kopf_et_al.pdf},
+author = {Kopf, S H and Sessions, AL and Cowley, Elise S and Reyes, Carmen and Van Sambeek, Lindsey and Hu, Yang and Orphan, Victoria Jeanne and Kato, Roberta and Newman, D K},
+title = {{Trace incorporation of heavy water reveals slow and heterogeneous pathogen growth rates in cystic fibrosis sputum.}},
+journal = {Proceedings of the National Academy of Sciences},
+year = {2016},
+volume = {113},
+number = {2},
+pages = {E110--6},
+month = {jan}
+}
+
+@article{Kraemer:2015,
+url_Paper = {2015_Kraemer_Kopf_Bau.pdf},
+author = {Kraemer, Dennis and Kopf, Sebastian H and Bau, Michael},
+title = {{Oxidative mobilization of cerium and uranium and enhanced release of "immobile" high field strength elements from igneous rocks in the presence of the biogenic siderophore desferrioxamine B}},
+journal = {Geochimica Et Cosmochimica Acta},
+year = {2015},
+volume = {165},
+number = {C},
+pages = {263--279},
+month = sep
 }
 
 @article{Cowley:2015,
+url_Paper = {2015_Cowley_et_al.pdf},
 author = {Cowley, Elise S and Kopf, S H and LaRiviere, Alejandro and Ziebis, Wiebke and Newman, D K},
 title = {{Pediatric Cystic Fibrosis Sputum Can Be Chemically Dynamic, Anoxic, and Extremely Reduced Due to Hydrogen Sulfide Formation.}},
 journal = {mBio},
@@ -30,37 +87,20 @@ number = {4},
 pages = {e00767}
 }
 
-@article{Kopf:2008uaa,
-author = {Kopf, S H and Ha-Duong, M and Hallegatte, S},
-title = {{Using maps of city analogues to display and interpret climate change scenarios and their uncertainty}},
-journal = {Natural Hazards And Earth System Sciences},
-year = {2008},
-volume = {8},
-number = {4},
-pages = {905--918}
+@article{Kopf:2015,
+url_Paper = {2015_Kopf_et_al.pdf},
+author = {Kopf, S H and McGlynn, Shawn E and Green-Saxena, Abigail and Guan, Yunbin and Newman, D K and Orphan, Victoria Jeanne},
+title = {{Heavy water and $^{15}$N labelling with NanoSIMS analysis reveals growth rate-dependent metabolic heterogeneity in chemostats.}},
+journal = {Environmental Microbiology},
+year = {2015},
+volume = {17},
+number = {7},
+pages = {2542--2556},
+month = jul
 }
 
-@article{Kopf:2011hz,
-author = {Kopf, S H and Newman, D K},
-title = {{Photomixotrophic growth of Rhodobacter capsulatus SB1003 on ferrous iron}},
-journal = {Geobiology},
-year = {2011},
-pages = {no--no},
-month = dec
-}
-
-@article{Kopf:2012eq,
-author = {Kopf, S H and Ono, Shuhei},
-title = {{Sulfur mass-independent fractionation in liquid phase chemistry: UV photolysis of phenacylphenylsulfone as a case study}},
-journal = {Geochimica Et Cosmochimica Acta},
-year = {2012},
-volume = {85},
-number = {C},
-pages = {160--169},
-month = may
-}
-
-@article{Kopf:2013dh,
+@article{Kopf:2013,
+url_Paper = {2013_Kopf_Henny_Newman.pdf},
 author = {Kopf, S H and Henny, Cynthia and Newman, D K},
 title = {{Ligand-enhanced abiotic iron oxidation and the effects of chemical versus biological iron cycling in anoxic environments.}},
 journal = {Environmental Science {\&} Technology},
@@ -71,25 +111,45 @@ pages = {2602--2611},
 month = mar
 }
 
-@article{Kopf:2014,
-author = {Kopf, S H and McGlynn, Shawn E and Green-Saxena, Abigail and Guan, Yunbin and Newman, D K and Orphan, Victoria Jeanne},
-title = {{Heavy water and (15) N labelling with NanoSIMS analysis reveals growth rate-dependent metabolic heterogeneity in chemostats.}},
-journal = {Environmental Microbiology},
-year = {2015},
-volume = {17},
-number = {7},
-pages = {2542--2556},
-month = jul
+@article{Kopf:2012,
+url_Paper = {2012_Kopf_Ono.pdf},
+author = {Kopf, S H and Ono, Shuhei},
+title = {{Sulfur mass-independent fractionation in liquid phase chemistry: UV photolysis of phenacylphenylsulfone as a case study}},
+journal = {Geochimica Et Cosmochimica Acta},
+year = {2012},
+volume = {85},
+number = {C},
+pages = {160--169},
+month = may
 }
 
-@article{Kopf:2015ds,
-url_Paper = {mypdfs/test.pdf},
-author = {Kopf, S H and Sessions, AL and Cowley, Elise S and Reyes, Carmen and Van Sambeek, Lindsey and Hu, Yang and Orphan, Victoria Jeanne and Kato, Roberta and Newman, D K},
-title = {{Trace incorporation of heavy water reveals slow and heterogeneous pathogen growth rates in cystic fibrosis sputum.}},
-journal = {Proceedings of the National Academy of Sciences},
-year = {2016},
-volume = {113},
-number = {2},
-pages = {E110--6},
-month = {jan}
+@incollection{Bose:2011,
+author = {Bose, A and Kopf, S H and Newman, D K},
+title = {{From Geocycles to Genomes and Back}},
+booktitle = {Microbial Metal and Metalloid Metabolism},
+year = {2011},
+pages = {13--38},
+publisher = {ASM Press},
+address = {Washington, D.C.}
+}
+
+@article{Kopf:2011,
+url_Paper = {2011_Kopf_Newman.pdf},
+author = {Kopf, S H and Newman, D K},
+title = {{Photomixotrophic growth of \emph{Rhodobacter capsulatus} SB1003 on ferrous iron}},
+journal = {Geobiology},
+year = {2011},
+pages = {no--no},
+month = dec
+}
+
+@article{Kopf:2008,
+url_Paper = {2008_Kopf_et_al.pdf},
+author = {Kopf, S H and Ha-Duong, M and Hallegatte, S},
+title = {{Using maps of city analogues to display and interpret climate change scenarios and their uncertainty}},
+journal = {Natural Hazards And Earth System Sciences},
+year = {2008},
+volume = {8},
+number = {4},
+pages = {905--918}
 }
