--- a/publications/references.bib
+++ b/publications/references.bib
@@ -4,7 +4,7 @@
 @article{McRose:2019,
 url_Paper = {2019_McRose_et_al.pdf},
 author = {McRose, D L and Lee, A and Kopf, S H and Baars, O and Kraepiel, A M L and Sigman, Daniel and Morel, F M M and Zhang, X},
-title = {{Effect of iron limitation on the isotopic composition of cellular and released fixed nitrogen in \emph{Azotobacter vinelandii}}},
+title = {{Effect of iron limitation on the isotopic composition of cellular and released fixed nitrogen in Azotobacter vinelandii}},
 journal = {Geochimica Et Cosmochimica Acta},
 year = {2019},
 volume = {244},
@@ -12,18 +12,18 @@ pages = {12--23},
 month = jan
 }
 
-@article{Neubauer:2018,
+@article{Neubauer:2018b,
 author = {Neubauer, Cajetan and Kasi, Ajay S and Grahl, Nora and Sessions, A L and Kopf, Sebastian H and Kato, Roberta and Hogan, Deborah A and Newman, D K},
-title = {{Refining the Application of Microbial Lipids as Tracers of \emph{Staphylococcus aureus} Growth Rates in Cystic Fibrosis Sputum.}},
+title = {{Refining the Application of Microbial Lipids as Tracers of Staphylococcus aureus Growth Rates in Cystic Fibrosis Sputum.}},
 journal = {Journal of Bacteriology},
 year = {2018},
 pages = {1--32},
 month = sep
 }
 
-@article{Neubauer:2018,
+@article{Neubauer:2018a,
 author = {Neubauer, Cajetan and Sessions, A L and Booth, Ian R and Bowen, Benjamin P and Kopf, Sebastian H and Newman, D K and Dalleska, Nathan F},
-title = {{Towards measuring growth rates of pathogens during infections by D$_{2}$O-labeling lipidomics}},
+title = {{Towards measuring growth rates of pathogens during infections by D2O-labeling lipidomics}},
 journal = {Rapid Communications in Mass Spectrometry},
 year = {2018},
 pages = {1--35},
@@ -40,6 +40,18 @@ volume = {135},
 number = {440-453},
 pages = {839--32},
 month = oct
+}
+
+@article{Pasulka:2017bu,
+url_Paper = {2017_Pasulka_et_al.pdf},
+author = {Pasulka, Alexis L and Thamatrakoln, Kimberlee and Kopf, Sebastian H and Guan, Yunbin and Poulos, Bonnie and Moradian, Annie and Sweredoski, Michael J and Hess, Sonja and Sullivan, Mathew B and Bidle, Kay D and Orphan, Victoria Jeanne},
+title = {{Interrogating marine virus-host interactions and elemental transfer with BONCAT and nanoSIMS-based methods}},
+journal = {Environmental Microbiology},
+year = {2017},
+volume = {20},
+number = {2},
+pages = {671--692},
+month = dec
 }
 
 @article{Marconi:2016,
@@ -90,7 +102,7 @@ pages = {e00767}
 @article{Kopf:2015,
 url_Paper = {2015_Kopf_et_al.pdf},
 author = {Kopf, S H and McGlynn, Shawn E and Green-Saxena, Abigail and Guan, Yunbin and Newman, D K and Orphan, Victoria Jeanne},
-title = {{Heavy water and $^{15}$N labelling with NanoSIMS analysis reveals growth rate-dependent metabolic heterogeneity in chemostats.}},
+title = {{Heavy water and 15N labelling with NanoSIMS analysis reveals growth rate-dependent metabolic heterogeneity in chemostats.}},
 journal = {Environmental Microbiology},
 year = {2015},
 volume = {17},
@@ -136,7 +148,7 @@ address = {Washington, D.C.}
 @article{Kopf:2011,
 url_Paper = {2011_Kopf_Newman.pdf},
 author = {Kopf, S H and Newman, D K},
-title = {{Photomixotrophic growth of \emph{Rhodobacter capsulatus} SB1003 on ferrous iron}},
+title = {{Photomixotrophic growth of Rhodobacter capsulatus SB1003 on ferrous iron}},
 journal = {Geobiology},
 year = {2011},
 pages = {no--no},
