--- a/publications/references.bib
+++ b/publications/references.bib
@@ -13,7 +13,7 @@ month = jan
 }
 
 @article{Neubauer:2018b,
-author = {Neubauer, Cajetan and Kasi, Ajay S and Grahl, Nora and Sessions, A L and Kopf, Sebastian H and Kato, Roberta and Hogan, Deborah A and Newman, D K},
+author = {Neubauer, Cajetan and Kasi, Ajay S and Grahl, Nora and Sessions, A L and Kopf, S H and Kato, Roberta and Hogan, Deborah A and Newman, D K},
 title = {{Refining the Application of Microbial Lipids as Tracers of Staphylococcus aureus Growth Rates in Cystic Fibrosis Sputum.}},
 journal = {Journal of Bacteriology},
 year = {2018},
@@ -22,7 +22,7 @@ month = sep
 }
 
 @article{Neubauer:2018a,
-author = {Neubauer, Cajetan and Sessions, A L and Booth, Ian R and Bowen, Benjamin P and Kopf, Sebastian H and Newman, D K and Dalleska, Nathan F},
+author = {Neubauer, Cajetan and Sessions, A L and Booth, Ian R and Bowen, Benjamin P and Kopf, S H and Newman, D K and Dalleska, Nathan F},
 title = {{Towards measuring growth rates of pathogens during infections by D2O-labeling lipidomics}},
 journal = {Rapid Communications in Mass Spectrometry},
 year = {2018},
@@ -32,7 +32,7 @@ month = sep
 
 @article{Silverman:2018,
 url_Paper = {2018_Silverman_et_al.pdf},
-author = {Silverman, Shaelyn N and Kopf, Sebastian H and Bebout, Brad M and Gordon, Richard and Som, Sanjoy M},
+author = {Silverman, Shaelyn N and Kopf, S H and Bebout, Brad M and Gordon, Richard and Som, Sanjoy M},
 title = {{Morphological and isotopic changes of heterocystous cyanobacteria in response to N2 partial pressure}},
 journal = {Geobiology},
 year = {2018},
@@ -44,7 +44,7 @@ month = oct
 
 @article{Pasulka:2017bu,
 url_Paper = {2017_Pasulka_et_al.pdf},
-author = {Pasulka, Alexis L and Thamatrakoln, Kimberlee and Kopf, Sebastian H and Guan, Yunbin and Poulos, Bonnie and Moradian, Annie and Sweredoski, Michael J and Hess, Sonja and Sullivan, Mathew B and Bidle, Kay D and Orphan, Victoria Jeanne},
+author = {Pasulka, Alexis L and Thamatrakoln, Kimberlee and Kopf, S H and Guan, Yunbin and Poulos, Bonnie and Moradian, Annie and Sweredoski, Michael J and Hess, Sonja and Sullivan, Mathew B and Bidle, Kay D and Orphan, Victoria Jeanne},
 title = {{Interrogating marine virus-host interactions and elemental transfer with BONCAT and nanoSIMS-based methods}},
 journal = {Environmental Microbiology},
 year = {2017},
@@ -78,7 +78,7 @@ month = {jan}
 
 @article{Kraemer:2015,
 url_Paper = {2015_Kraemer_Kopf_Bau.pdf},
-author = {Kraemer, Dennis and Kopf, Sebastian H and Bau, Michael},
+author = {Kraemer, Dennis and Kopf, S H and Bau, Michael},
 title = {{Oxidative mobilization of cerium and uranium and enhanced release of "immobile" high field strength elements from igneous rocks in the presence of the biogenic siderophore desferrioxamine B}},
 journal = {Geochimica Et Cosmochimica Acta},
 year = {2015},
