--- a/publications/references.bib
+++ b/publications/references.bib
@@ -42,6 +42,17 @@ pages = {839--32},
 month = oct
 }
 
+@article{Miller:2018,
+url_Paper = {2018_Miller_et_al.pdf},
+author = {Miller, Hannah M and Chaudhry, Nabil and Conrad, Mark E and Bill, Markus and Kopf, Sebastian H and Templeton, Alexis S},
+title = {{Large carbon isotope variability during methanogenesis under alkaline conditions}},
+journal = {Geochimica Et Cosmochimica Acta},
+year = {2018},
+volume = {237},
+pages = {18--31},
+month = sep
+}
+
 @article{Pasulka:2017bu,
 url_Paper = {2017_Pasulka_et_al.pdf},
 author = {Pasulka, Alexis L and Thamatrakoln, Kimberlee and Kopf, S H and Guan, Yunbin and Poulos, Bonnie and Moradian, Annie and Sweredoski, Michael J and Hess, Sonja and Sullivan, Mathew B and Bidle, Kay D and Orphan, Victoria Jeanne},
