adam picture added

--- a/people/_posts/2018-08-01-adam.md
+++ b/people/_posts/2018-08-01-adam.md
@@ -6,8 +6,8 @@ group: staff
 email: adam.younkin@colorado.edu
 phone:
 address:
-thumbnail: /people/images/placeholder.jpg
-picture:
+thumbnail: /people/images/adam_thumbnail.jpg
+picture: /people/images/adam.jpg
 caption:  
 ---
 
