add news articles

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -19,7 +19,8 @@ title = {{Refining the Application of Microbial Lipids as Tracers of Staphylococ
 journal = {Journal of Bacteriology},
 year = {2018},
 pages = {1--32},
-month = sep
+month = sep,
+doi = {10.1128/JB.00365-18}
 }
 
 @article{Neubauer:2018a,
@@ -36,11 +37,9 @@ url_Paper = {2018_Silverman_et_al.pdf},
 author = {Silverman, Shaelyn N and Kopf, S H and Bebout, Brad M and Gordon, Richard and Som, Sanjoy M},
 title = {{Morphological and isotopic changes of heterocystous cyanobacteria in response to N2 partial pressure}},
 journal = {Geobiology},
-year = {2018},
-volume = {135},
-number = {440-453},
-pages = {839--32},
-month = oct
+year = {2019},
+volume = {17},
+pages = {60–75}
 }
 
 @article{Miller:2018,
