add srijak's paper

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,6 +1,16 @@
 %% Created using Papers on Mon, 07 Mar 2016.
 %% http://papersapp.com/papers/
 
+@article{Bhatnagar:2020,
+url_Paper = {2020_Bhatnagar_et_al.pdf},
+author = {Bhatnagar, S and Cowley, E S and Kopf, S H and Pérez Castro, S and Kearney, S and Dawson, S C and Hanselmann, K and Ruff, S E},
+title = {{Microbial community dynamics and coexistence in a sulfide-driven phototrophic bloom}},
+journal = {Environmental Microbiome},
+year = {2020},
+volume = {15},
+doi = {10.1186/s40793-019-0348-0}
+}
+
 @article{McRose:2019,
 url_Paper = {2019_McRose_et_al.pdf},
 author = {McRose, D L and Lee, A and Kopf, S H and Baars, O and Kraepiel, A M L and Sigman, Daniel and Morel, F M M and Zhang, X},
