--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,6 +1,29 @@
 %% Created using Papers on Mon, 07 Mar 2016.
 %% http://papersapp.com/papers/
 
+@article{doi:10.1021/acs.est.0c07816,
+url_Paper = {2021_Asamoto_et_al.pdf},
+author = {Asamoto, Ciara K. and Rempfert, Kaitlin R. and Luu, Victoria H. and Younkin, Adam D. and Kopf, Sebastian H.},
+title = {Enzyme-Specific Coupling of Oxygen and Nitrogen Isotope Fractionation of the Nap and Nar Nitrate Reductases},
+journal = {Environmental Science \& Technology},
+volume = {0},
+number = {0},
+year = {2021},
+doi = {10.1021/acs.est.0c07816},
+}
+
+@article{https://doi.org/10.1002/rcm.8983,
+url_Paper = {2021_Lengger_et_al.pdf},
+author = {Lengger, Sabine K. and Weber, Yuki and Taylor, Kyle W.R. and Kopf, Sebastian H. and Berstan, Robert and Bull, Ian D. and Mayser, Jan-Peter and Leavitt, William D. and Blewett, Jerome and Pearson, Ann and Pancost, Richard D.},
+title = {Determination of the δ2H values of high molecular weight lipids by high-temperature gas chromatography coupled to isotope ratio mass spectrometry},
+journal = {Rapid Communications in Mass Spectrometry},
+volume = {35},
+number = {4},
+pages = {e8983},
+doi = {https://doi.org/10.1002/rcm.8983},
+year = {2021}
+}
+
 @article{Bhatnagar:2020,
 url_Paper = {2020_Bhatnagar_et_al.pdf},
 author = {Bhatnagar, S and Cowley, E S and Kopf, S H and Pérez Castro, S and Kearney, S and Dawson, S C and Hanselmann, K and Ruff, S E},
