add isoreader paper

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,7 +1,16 @@
-%% Created using Papers on Mon, 07 Mar 2016.
-%% http://papersapp.com/papers/
+@article{Kopf:2021,
+url_Paper = {2021_Kopf_Davidheiser_Kocken.pdf},
+author = {Kopf, Sebastian and Davidheiser-Kroll, Brett and Kocken, Ilja},
+doi = {10.21105/joss.02878},
+journal = {Journal of Open Source Software},
+number = {61},
+pages = {2878},
+title = {{Isoreader: An R package to read stable isotope data files for reproducible research}},
+volume = {6},
+year = {2021}
+}
 
-@article{doi:10.1021/acs.est.0c07816,
+@article{Asamoto:2021,
 url_Paper = {2021_Asamoto_et_al.pdf},
 author = {Asamoto, Ciara K. and Rempfert, Kaitlin R. and Luu, Victoria H. and Younkin, Adam D. and Kopf, Sebastian H.},
 title = {Enzyme-Specific Coupling of Oxygen and Nitrogen Isotope Fractionation of the Nap and Nar Nitrate Reductases},
@@ -12,7 +21,7 @@ year = {2021},
 doi = {10.1021/acs.est.0c07816},
 }
 
-@article{https://doi.org/10.1002/rcm.8983,
+@article{Lengger:2021,
 url_Paper = {2021_Lengger_et_al.pdf},
 author = {Lengger, Sabine K. and Weber, Yuki and Taylor, Kyle W.R. and Kopf, Sebastian H. and Berstan, Robert and Bull, Ian D. and Mayser, Jan-Peter and Leavitt, William D. and Blewett, Jerome and Pearson, Ann and Pancost, Richard D.},
 title = {Determination of the δ2H values of high molecular weight lipids by high-temperature gas chromatography coupled to isotope ratio mass spectrometry},
