--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,3 +1,28 @@
+@article{Hilkert:2021,
+url_Paper = {2021_Hilkert_et_al.pdf},
+author = {Hilkert, Andreas and B{\"{o}}hlke, John K and Mroczkowski, Stanley J and Fort, Kyle L and Aizikov, Konstantin and Wang, Xingchen T and Kopf, Sebastian H and Neubauer, Cajetan},
+doi = {10.1021/acs.analchem.1c00944},
+issn = {0003-2700},
+journal = {Analytical Chemistry},
+month = {jun},
+publisher = {American Chemical Society},
+title = {{Exploring the Potential of Electrospray-Orbitrap for Stable Isotope Analysis Using Nitrate as a Model}},
+url = {https://doi.org/10.1021/acs.analchem.1c00944},
+year = {2021}
+}
+
+@article{Raberg:2021,
+url_Paper = {2021_Raberg_et_al.pdf},
+author = {Raberg, J H and Harning, D J and Crump, S E and de Wet, G and Blumm, A and Kopf, S and Geirsd{\'{o}}ttir, {\'{A}} and Miller, G H and Sep{\'{u}}lveda, J},
+doi = {10.5194/bg-2021-16},
+journal = {Biogeosciences Discussions},
+pages = {1--36},
+title = {{Revised fractional abundances and warm-season temperatures substantially improve brGDGT calibrations in lake sediments}},
+url = {https://bg.copernicus.org/preprints/bg-2021-16/},
+volume = {2021},
+year = {2021}
+}
+
 @article{Kopf:2021,
 url_Paper = {2021_Kopf_Davidheiser_Kocken.pdf},
 author = {Kopf, Sebastian and Davidheiser-Kroll, Brett and Kocken, Ilja},
