--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,26 +1,27 @@
 @article{Hilkert:2021,
 url_Paper = {2021_Hilkert_et_al.pdf},
-author = {Hilkert, Andreas and B{\"{o}}hlke, John K and Mroczkowski, Stanley J and Fort, Kyle L and Aizikov, Konstantin and Wang, Xingchen T and Kopf, Sebastian H and Neubauer, Cajetan},
-doi = {10.1021/acs.analchem.1c00944},
-issn = {0003-2700},
+author = {Hilkert, Andreas and Böhlke, John K. and Mroczkowski, Stanley J. and Fort, Kyle L. and Aizikov, Konstantin and Wang, Xingchen T. and Kopf, Sebastian H. and Neubauer, Cajetan},
+title = {Exploring the Potential of Electrospray-Orbitrap for Stable Isotope Analysis Using Nitrate as a Model},
 journal = {Analytical Chemistry},
-month = {jun},
-publisher = {American Chemical Society},
-title = {{Exploring the Potential of Electrospray-Orbitrap for Stable Isotope Analysis Using Nitrate as a Model}},
-url = {https://doi.org/10.1021/acs.analchem.1c00944},
-year = {2021}
+volume = {93},
+number = {26},
+pages = {9139-9148},
+year = {2021},
+doi = {10.1021/acs.analchem.1c00944},
+URL = {https://doi.org/10.1021/acs.analchem.1c00944}
 }
 
 @article{Raberg:2021,
 url_Paper = {2021_Raberg_et_al.pdf},
-author = {Raberg, J H and Harning, D J and Crump, S E and de Wet, G and Blumm, A and Kopf, S and Geirsd{\'{o}}ttir, {\'{A}} and Miller, G H and Sep{\'{u}}lveda, J},
-doi = {10.5194/bg-2021-16},
-journal = {Biogeosciences Discussions},
-pages = {1--36},
-title = {{Revised fractional abundances and warm-season temperatures substantially improve brGDGT calibrations in lake sediments}},
-url = {https://bg.copernicus.org/preprints/bg-2021-16/},
-volume = {2021},
-year = {2021}
+author = {Raberg, J. H. and Harning, D. J. and Crump, S. E. and de Wet, G. and Blumm, A. and Kopf, S. and Geirsd\'ottir, \'A. and Miller, G. H. and Sep\'ulveda, J.},
+title = {Revised fractional abundances and warm-season temperatures substantially improve brGDGT calibrations in lake sediments},
+journal = {Biogeosciences},
+volume = {18},
+year = {2021},
+number = {12},
+pages = {3579--3603},
+url = {https://bg.copernicus.org/articles/18/3579/2021/},
+doi = {10.5194/bg-18-3579-2021}
 }
 
 @article{Kopf:2021,
@@ -40,10 +41,12 @@ url_Paper = {2021_Asamoto_et_al.pdf},
 author = {Asamoto, Ciara K. and Rempfert, Kaitlin R. and Luu, Victoria H. and Younkin, Adam D. and Kopf, Sebastian H.},
 title = {Enzyme-Specific Coupling of Oxygen and Nitrogen Isotope Fractionation of the Nap and Nar Nitrate Reductases},
 journal = {Environmental Science \& Technology},
-volume = {0},
-number = {0},
+volume = {55},
+number = {8},
+pages = {5537-5546},
 year = {2021},
 doi = {10.1021/acs.est.0c07816},
+url = {https://doi.org/10.1021/acs.est.0c07816}
 }
 
 @article{Lengger:2021,
