--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,3 +1,16 @@
+@article{Boudinot:2021,
+url_Paper = {2021_Boudinot_et_al.pdf}
+author = {Boudinot, F. Garrett and Kopf, Sebastian and Dildar, Nadia and Sepúlveda, Julio},
+title = {Carbon Cycling During Oceanic Anoxic Event 2: Compound-Specific Carbon Isotope Evidence From the Western Interior Seaway},
+journal = {Paleoceanography and Paleoclimatology},
+volume = {36},
+number = {9},
+pages = {e2021PA004287},
+doi = {https://doi.org/10.1029/2021PA004287},
+url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2021PA004287},
+year = {2021}
+}
+
 @article{Hilkert:2021,
 url_Paper = {2021_Hilkert_et_al.pdf},
 author = {Hilkert, Andreas and Böhlke, John K. and Mroczkowski, Stanley J. and Fort, Kyle L. and Aizikov, Konstantin and Wang, Xingchen T. and Kopf, Sebastian H. and Neubauer, Cajetan},
