--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,5 +1,5 @@
 @article{Boudinot:2021,
-url_Paper = {2021_Boudinot_et_al.pdf}
+url_Paper = {2021_Boudinot_et_al.pdf},
 author = {Boudinot, F. Garrett and Kopf, Sebastian and Dildar, Nadia and Sepúlveda, Julio},
 title = {Carbon Cycling During Oceanic Anoxic Event 2: Compound-Specific Carbon Isotope Evidence From the Western Interior Seaway},
 journal = {Paleoceanography and Paleoclimatology},
