add new publications

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,3 +1,30 @@
+@article{Fripiat:2021,
+url_Paper = {2021_Fripiat_et_al.pdf},
+author = {Fripiat, Fran{\c{c}}ois and Mart{\'{i}}nez-Garc{\'{i}}a, Alfredo and Marconi, Dario and Fawcett, Sarah E and Kopf, Sebastian H and Luu, Victoria H and Rafter, Patrick A and Zhang, Run and Sigman, Daniel M and Haug, Gerald H},
+doi = {10.1038/s41561-021-00836-8},
+issn = {1752-0908},
+journal = {Nature Geoscience},
+title = {{Nitrogen isotopic constraints on nutrient transport to the upper ocean}},
+url = {https://doi.org/10.1038/s41561-021-00836-8},
+year = {2021}
+}
+
+@article{Nothaft:2021,
+url_Paper = {2021_Nothaft_et_al.pdf},
+author = {Nothaft, Daniel B. and Templeton, Alexis S. and Rhim, Jeemin H. and Wang, David T. and Labidi, Jabrane and Miller, Hannah M. and Boyd, Eric S. and Matter, Juerg M. and Ono, Shuhei and Young, Edward D. and Kopf, Sebastian H. and Kelemen, Peter B. and Conrad, Mark E. and The Oman Drilling Project Science Team},
+title = {Geochemical, Biological, and Clumped Isotopologue Evidence for Substantial Microbial Methane Production Under Carbon Limitation in Serpentinites of the Samail Ophiolite, Oman},
+journal = {Journal of Geophysical Research: Biogeosciences},
+volume = {126},
+number = {10},
+pages = {e2020JG006025},
+keywords = {serpentinization, hydrogen, alkane, methanogenesis, methanotrophy, Methanobacterium},
+doi = {https://doi.org/10.1029/2020JG006025},
+url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2020JG006025},
+eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2020JG006025},
+note = {e2020JG006025 2020JG006025},
+year = {2021}
+}
+
 @article{Boudinot:2021,
 url_Paper = {2021_Boudinot_et_al.pdf},
 author = {Boudinot, F. Garrett and Kopf, Sebastian and Dildar, Nadia and Sepúlveda, Julio},
