--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,3 +1,17 @@
+@article{Halamka:2021,
+url_Paper = {2021_Halamka_et_al.pdf}
+abstract = {Branched glycerol dialkyl glycerol tetraethers (brGDGTs) are ubiquitous and well preserved sedimentary biomarkers. These compounds serve as important palaeoenvironmental indicators due to strong empirical correlations between brGDGT distributions and temperature and pH in modern environments. However, the mechanistic link between temperature, pH, and brGDGT production has been impossible to ascertain thus far due to the absence of a clear biological source for brGDGTs. Here, we report that oxygen limitation triggers brGDGT production in at least one cultured species of Acidobacteria and confirm for the first time the biosynthesis of three structural varieties of brGDGTs, including an uncharacterised isomer of brGDGT Ic. This discovery helps explain why brGDGT producers have been so difficult to identify and provides a pathway towards uncovering the genetic basis and biological function of brGDGTs, which will lead to a more comprehensive understanding of their palaeoenvironmental significance. If the oxygen effects observed here apply more broadly, the empirical calibrations for brGDGT-based temperature and pH reconstructions may currently be missing the effects of oxygen as a relevant and possibly dominant control in the environmental distributions of brGDGTs.},
+author = {Halamka, T A and McFarlin, J M and Younkin, A D and Depoy, J and Dildar, N and Kopf, S H},
+doi = {http://dx.doi.org/10.7185/geochemlet.2132},
+file = {:Users/sk/My Drive/science/literature/2021/Halamka et al.{\_}2021{\_}Oxygen limitation can trigger the production of branched GDGTs in culture.pdf:pdf},
+journal = {Geochemical Perspectives Letters},
+pages = {36--39},
+title = {{Oxygen limitation can trigger the production of branched GDGTs in culture}},
+url = {http://www.geochemicalperspectivesletters.org/article2132},
+volume = {19},
+year = {2021}
+}
+
 @article{Fripiat:2021,
 url_Paper = {2021_Fripiat_et_al.pdf},
 author = {Fripiat, Fran{\c{c}}ois and Mart{\'{i}}nez-Garc{\'{i}}a, Alfredo and Marconi, Dario and Fawcett, Sarah E and Kopf, Sebastian H and Luu, Victoria H and Rafter, Patrick A and Zhang, Run and Sigman, Daniel M and Haug, Gerald H},
