--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,5 +1,5 @@
 @article{Halamka:2021,
-url_Paper = {2021_Halamka_et_al.pdf}
+url_Paper = {2021_Halamka_et_al.pdf},
 author = {Halamka, T A and McFarlin, J M and Younkin, A D and Depoy, J and Dildar, N and Kopf, S H},
 doi = {http://dx.doi.org/10.7185/geochemlet.2132},
 journal = {Geochemical Perspectives Letters},
