add Halamka et al. 2022

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,3 +1,16 @@
+@article{Halamka:2022,
+author = {Halamka, Toby A. and Raberg, Jonathan H. and McFarlin, Jamie M. and Younkin, Adam D. and Mulligan, Christopher and Liu, Xiao-Lei and Kopf, Sebastian H.},
+title = {Production of diverse brGDGTs by Acidobacterium Solibacter usitatus in response to temperature, pH, and O2 provides a culturing perspective on brGDGT proxies and biosynthesis},
+journal = {Geobiology},
+volume = {n/a},
+number = {n/a},
+pages = {},
+keywords = {Acidobacteria, brGDGTs, paleoclimate},
+doi = {https://doi.org/10.1111/gbi.12525},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gbi.12525},
+year = {2022}
+}
+
 @article{Halamka:2021,
 url_Paper = {2021_Halamka_et_al.pdf},
 author = {Halamka, T A and McFarlin, J M and Younkin, A D and Depoy, J and Dildar, N and Kopf, S H},
