--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,4 +1,5 @@
 @article{Halamka:2022,
+url_Paper = {2022_Halamka_et_al.pdf},
 author = {Halamka, Toby A. and Raberg, Jonathan H. and McFarlin, Jamie M. and Younkin, Adam D. and Mulligan, Christopher and Liu, Xiao-Lei and Kopf, Sebastian H.},
 title = {Production of diverse brGDGTs by Acidobacterium Solibacter usitatus in response to temperature, pH, and O2 provides a culturing perspective on brGDGT proxies and biosynthesis},
 journal = {Geobiology},
