add Jason's paper

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,3 +1,17 @@
+@article{boettger:2022,
+  author = {Boettger, Jason D. and Neubauer, Cajetan and Kopf, Sebastian H. and Kubicki, James D.},
+  title = {Microbial Denitrification: Active Site and Reaction Path Models Predict New Isotopic Fingerprints},
+  journal = {ACS Earth and Space Chemistry},
+  volume = {6},
+  number = {11},
+  pages = {2582-2594},
+  year = {2022},
+  doi = {10.1021/acsearthspacechem.2c00102},
+  URL = {https://doi.org/10.1021/acsearthspacechem.2c00102},
+  eprint = {https://doi.org/10.1021/acsearthspacechem.2c00102}
+}
+
+
 @article{Halamka:2022,
 url_Paper = {2022_Halamka_et_al.pdf},
 author = {Halamka, Toby A. and Raberg, Jonathan H. and McFarlin, Jamie M. and Younkin, Adam D. and Mulligan, Christopher and Liu, Xiao-Lei and Kopf, Sebastian H.},
