add new publications

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,3 +1,54 @@
+
+@article{havranek:2023,
+  author = {Havranek, R. E. and Snell, K. E. and Kopf, S. H. and Davidheiser-Kroll, B. and Morris, V. and Vaughn, B.},
+  title = {Lessons from and best practices for the deployment of the Soil Water Isotope Storage System},
+  journal = {EGUsphere},
+  volume = {2022},
+  year = {2022},
+  pages = {1--29},
+  URL = {https://egusphere.copernicus.org/preprints/2022/egusphere-2022-1170/},
+  doi = {10.5194/egusphere-2022-1170}
+}
+
+@article{leavitt:2023,
+  url_Paper = {2023_Leavitt_et_al.pdf},
+  title = {Controls on the hydrogen isotope composition of tetraether lipids in an autotrophic ammonia-oxidizing marine archaeon},
+  journal = {Geochimica et Cosmochimica Acta},
+  volume = {352},
+  pages = {194-210},
+  year = {2023},
+  issn = {0016-7037},
+  doi = {https://doi.org/10.1016/j.gca.2023.04.033},
+  url = {https://www.sciencedirect.com/science/article/pii/S0016703723002028},
+  author = {W.D. Leavitt and S.H. Kopf and Y. Weber and B. Chiu and J.M. McFarlin and F.J. Elling and S. Hoeft-McCann and A. Pearson},
+  keywords = {Archaeal lipids, GDGTs, Biphytanes, Biomarkers}
+}
+
+@article{caro:2023,
+  author = {Tristan A. Caro  and Jamie McFarlin  and Sierra Jech  and Noah Fierer  and Sebastian Kopf },
+  title = {Hydrogen stable isotope probing of lipids demonstrates slow rates of microbial growth in soil},
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {120},
+  number = {16},
+  pages = {e2211625120},
+  year = {2023},
+  doi = {10.1073/pnas.2211625120},
+  URL = {https://www.pnas.org/doi/abs/10.1073/pnas.2211625120},
+  eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.2211625120}
+}
+
+@article{rempfert:2023,
+  url_Paper = {2023_Rempfert_et_al.pdf},
+  author={Rempfert, Kaitlin R. and Nothaft, Daniel B. and Kraus, Emily A. and Asamoto, Ciara K. and Evans, R. Dave and Spear, John R. and Matter, Juerg M. and Kopf, Sebastian H. and Templeton, Alexis S.},
+	title={Subsurface biogeochemical cycling of nitrogen in the actively serpentinizing Samail Ophiolite, Oman},
+	journal={Frontiers in Microbiology},
+	volume={14},
+	year={2023},
+	URL={https://www.frontiersin.org/articles/10.3389/fmicb.2023.1139633},
+	doi={10.3389/fmicb.2023.1139633},
+	issn={1664-302X}
+}
+
 @article{boettger:2022,
   author = {Boettger, Jason D. and Neubauer, Cajetan and Kopf, Sebastian H. and Kubicki, James D.},
   title = {Microbial Denitrification: Active Site and Reaction Path Models Predict New Isotopic Fingerprints},
@@ -10,7 +61,6 @@
   URL = {https://doi.org/10.1021/acsearthspacechem.2c00102},
   eprint = {https://doi.org/10.1021/acsearthspacechem.2c00102}
 }
-
 
 @article{Halamka:2022,
 url_Paper = {2022_Halamka_et_al.pdf},
