add Jeemin's paper

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,4 +1,5 @@
 @article{rhim:2024,
+  url_Paper = {2024_Rhim_et_al.pdf},
   title = {Metabolic imprints in the hydrogen isotopes of Archaeoglobus fulgidus tetraether lipids},
   journal = {Geochimica et Cosmochimica Acta},
   year = {2024},
