--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,3 +1,17 @@
+@article{asamoto:2024,
+  url_Paper = {2024_Asamoto_et_al.pdf},
+  author = {Ciara K. Asamoto  and Yeongjun Ryu  and Kelly N. Eckartt  and Julia Kelley-Kern  and Lars E.P. Dietrich  and Daniel M. Sigman  and Sebastian H. Kopf },
+  title = {Stable isotopic signature of dissimilatory nitrate reduction is robust against enzyme mutation},
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {121},
+  number = {48},
+  pages = {e2416002121},
+  year = {2024},
+  doi = {10.1073/pnas.2416002121},
+  URL = {https://www.pnas.org/doi/abs/10.1073/pnas.2416002121},
+  eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.2416002121}
+}
+
 @article{rhim:2024,
   url_Paper = {2024_Rhim_et_al.pdf},
   title = {Metabolic imprints in the hydrogen isotopes of Archaeoglobus fulgidus tetraether lipids},
