add new references

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,3 +1,48 @@
+@article{mahapatra:2025,
+  url_Paper = {2025_Mahapatra_et_al.pdf},
+  author = {Mahapatra, Samarpita and Kopf, Sebastian H. and Halamka, Toby and Merten, Christian and Drost, Deborah A. and Minnaard, Adriaan J.},
+  title = {Total Synthesis of the Membrane Spanning Tetraether Lipid brGDGT Ia and Elucidation of Its Stereochemical Configuration},
+  journal = {Chemistry – A European Journal},
+  volume = {31},
+  number = {25},
+  pages = {e202500702},
+  keywords = {asymmetric synthesis, branched tetraethers, relative configuration, stereoisomers, total synthesis},
+  doi = {https://doi.org/10.1002/chem.202500702},
+  url = {https://chemistry-europe.onlinelibrary.wiley.com/doi/abs/10.1002/chem.202500702},
+  eprint = {https://chemistry-europe.onlinelibrary.wiley.com/doi/pdf/10.1002/chem.202500702},
+  year = {2025}
+}
+
+@article{harris:2025,
+  url_Paper = {2025_Harris_et_al.pdf},
+  author = {Carolynn M. Harris and Sebastian Kopf and Jeemin H. Rhim and Alec Cobban and Felix J. Elling and Xiahong Feng and Jamie McFarlin and Yuki Weber and Yujiao Zhang and Alice Zhou and Harpreet Batther and Ann Pearson and William D. Leavitt},
+  title = {Lipid hydrogen isotope compositions primarily reflect growth water in the model archaeon <i>Sulfolobus acidocaldarius</i>},
+  journal = {Applied and Environmental Microbiology},
+  volume = {91},
+  number = {4},
+  pages = {e01983-24},
+  year = {2025},
+  doi = {10.1128/aem.01983-24},
+  URL = {https://journals.asm.org/doi/abs/10.1128/aem.01983-24},
+  eprint = {https://journals.asm.org/doi/pdf/10.1128/aem.01983-24}
+}
+
+@article{han:2025,
+  url_Paper = {2025_Han_et_al.pdf},
+  author = {Han, Eunah and Kopf, Sebastian H and Maloney, Ashley E and Ai, Xuyuan Ellen and Sigman, Daniel M and Zhang, Xinning},
+  title = {Nitrogen stable isotope fractionation by biological nitrogen fixation reveals cellular nitrogenase is diffusion limited},
+  journal = {PNAS Nexus},
+  volume = {4},
+  number = {3},
+  pages = {pgaf061},
+  year = {2025},
+  month = {02},
+  issn = {2752-6542},
+  doi = {10.1093/pnasnexus/pgaf061},
+  url = {https://doi.org/10.1093/pnasnexus/pgaf061},
+  eprint = {https://academic.oup.com/pnasnexus/article-pdf/4/3/pgaf061/62115319/pgaf061.pdf}
+}
+
 @article{asamoto:2024,
   url_Paper = {2024_Asamoto_et_al.pdf},
   author = {Ciara K. Asamoto  and Yeongjun Ryu  and Kelly N. Eckartt  and Julia Kelley-Kern  and Lars E.P. Dietrich  and Daniel M. Sigman  and Sebastian H. Kopf },
