add Katherine's paper

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,3 +1,15 @@
+@article{keller:2025,
+  url_Paper = {2025_Keller_et_al.pdf},
+  title = {Compound-specific carbon and hydrogen isotope analysis traces archaeal lipid signatures in cold seep marine systems},
+  journal = {Geochimica et Cosmochimica Acta},
+  year = {2025},
+  issn = {0016-7037},
+  doi = {https://doi.org/10.1016/j.gca.2025.08.017},
+  url = {https://www.sciencedirect.com/science/article/pii/S0016703725004235},
+  author = {Katherine Keller and Sebastian Kopf and Jamie McFarlin and Ashley Maloney and Jeemin H. Rhim and Felix J. Elling and Kemi Ashing-Giwa and Isabel Baker and Amanda Calhoun and Ann Pearson},
+  keywords = {Isotopes, Hydrogen, Carbon, GDGTs, Methane cycling}
+}
+
 @article{mahapatra:2025,
   url_Paper = {2025_Mahapatra_et_al.pdf},
   author = {Mahapatra, Samarpita and Kopf, Sebastian H. and Halamka, Toby and Merten, Christian and Drost, Deborah A. and Minnaard, Adriaan J.},
